--- a/Assignment/Assignment - II/app/src/main/res/layout/activity_photo_upload.xml
+++ b/Assignment/Assignment - II/app/src/main/res/layout/activity_photo_upload.xml
@@ -93,7 +93,7 @@
 
         <Button
             android:id="@+id/uploadfile"
-            android:layout_width="wrap_content"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_bg"
             android:text="Upload"
