--- a/Assignment/Assignment - II/app/src/main/res/layout/activity_login.xml
+++ b/Assignment/Assignment - II/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:text="Login"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
 
