--- a/Assignment/Assignment - II/app/src/main/res/layout/activity_main.xml
+++ b/Assignment/Assignment - II/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,9 @@
             android:id="@+id/header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello Gocery Shop"
+            android:text="Grocery Shop"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="italic"
             android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
@@ -33,19 +33,17 @@
         android:layout_below="@id/linear_header"
         android:layout_width="match_parent"
         android:scrollbars="vertical"
-        android:layout_height="600dp" />
+        android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addNewUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:layout_below="@id/main_recycle_view"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="10dp"
+       android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
         android:src="@drawable/ic_baseline_add_24" />
-
 
 </RelativeLayout>
